--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dxf-parser": "^1.1.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.485.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
