--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,10 @@
     "clsx": "^2.1.1",
     "dxf-parser": "^1.1.2",
     "jwt-decode": "^4.0.0",
+    "laravel-echo": "^2.0.2",
     "lucide-react": "^0.485.0",
     "next": "^15.2.4",
+    "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
