--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
+    "aos": "^2.3.4",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
