--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
     "recharts": "^2.15.1",
+    "styled-components": "^6.1.17",
     "tailwind-merge": "^3.1.0",
     "three": "^0.175.0",
     "tw-animate-css": "^1.2.5"
