--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "start": "set PORT=5174 && react-scripts start",
-
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -24,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dxf-parser": "^1.1.2",
+    "html2canvas": "^1.4.1",
     "jwt-decode": "^4.0.0",
     "laravel-echo": "^2.0.2",
     "lucide-react": "^0.485.0",
