--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dxf-parser": "^1.1.2",
     "html2canvas": "^1.4.1",
     "jwt-decode": "^4.0.0",
